<!--
  ~  Copyright  2016 Tim Harvey <harvey.tim@gmail.com>
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="error_bluetooth_not_enabled">Bluetooth is not enabled.</string>
    <string name="unknown_device">Unknown device</string>

    <!-- Menu items -->
    <string name="action_new">New</string>
    <string name="action_rename">Rename Workspace</string>
    <string name="action_stop">Stop</string>
    <string name="action_connect">Connect</string>

    <string name="app_name">BlocklyBot</string>

    <!-- Preference items -->
    <string name="pref_autoattach">AutoAttach</string>
    <string name="pref_autoattach_summ">Auto Attach to the previously selected device on startup</string>
    <string name="pref_filterincompatible">Filter Device List by compatibility</string>
    <string name="pref_filterincompatible_summ">Filter incompatible devices from discovery (takes longer to scan)</string>
    <string name="pref_scanBT">Scan Bluetooth</string>
    <string name="pref_scanBT_summ">Scan for Bluetooth devices</string>
    <string name="pref_scanBLE">Scan Bluetooth Low Energy</string>
    <string name="pref_scanBLE_summ">Scan for Bluetooth Low Engergy (BLE) devices</string>

        <!-- Strings related to Settings -->
    <string name="pref_header_apriltag">AprilTag Processing Options</string>

    <string name="pref_title_refine_edges">Enable refine edges</string>
    <string name="pref_description_refine_edges">Refines edges for better estimates at the cost of computation time</string>

    <string name="pref_title_refine_decode">Enable refine decode</string>
    <string name="pref_description_refine_decode">Refines decoding</string>

    <string name="pref_title_refine_pose">Enable refine pose</string>
    <string name="pref_description_refine_pose">Refines poses</string>

    <string name="pref_title_decimation">Image decimation</string>
    <string-array name="pref_decimation_list_titles">
        <item>1 (no decimation)</item>
        <item>1.5</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="pref_decimation_list_values">
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="pref_title_sigma">Gaussian blur (sigma, in pixels)</string>
    <string name="pref_default_sigma">0.0</string>

    <string name="pref_title_nthreads">Number of threads</string>
    <string name="pref_default_nthreads">0</string>

    <string name="pref_title_tag_family">Tag family</string>
    <string-array name="pref_tag_family_list_titles">
        <item>tag36h11 (recommended)</item>
        <item>tag36h10</item>
        <item>tag25h9</item>
        <item>tag25h7</item>
        <item>tag16h5</item>
    </string-array>
    <string-array name="pref_tag_family_list_values">
        <item>tag36h11</item>
        <item>tag36h10</item>
        <item>tag25h9</item>
        <item>tag25h7</item>
        <item>tag16h5</item>
    </string-array>

    <string name="pref_title_camera_facing">Camera</string>
    <string-array name="pref_camera_facing_list_titles">
        <item>Rear (default)</item>
        <item>Front</item>
    </string-array>
    <string-array name="pref_camera_facing_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="pref_title_camera_resolution">Camera resolution</string>
    <string-array name="pref_camera_resolution_titles">
        <item>1920 x 1080</item>
        <item>720 x 480</item>
    </string-array>
    <string-array name="pref_camera_resolution_values">
        <item>1080</item>
        <item>480</item>
    </string-array>
</resources>
