<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    <CheckBoxPreference
        android:key="pref_sync"
        android:title="@string/pref_autoattach"
        android:summary="@string/pref_autoattach_summ"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_filterincompatible"
        android:title="@string/pref_filterincompatible"
        android:summary="@string/pref_filterincompatible_summ"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_scanBT"
        android:title="@string/pref_scanBT"
        android:summary="@string/pref_scanBT_summ"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_scanBLE"
        android:title="@string/pref_scanBLE"
        android:summary="@string/pref_scanBLE_summ"
        android:defaultValue="true" />
    -->
    <PreferenceCategory
        android:title="Robot"
        android:key="robot">
        <EditTextPreference
            android:inputType="text"
            android:key="robotAddress"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Address"
            android:defaultValue="192.168.1.2:8888"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="AprilTag Processing"
        android:key="pref_cat_processing">
        <!--
    <SwitchPreference
        android:visibility="invisible"
        android:defaultValue="false"
        android:key="refine_edges_switch"
        android:summary="@string/pref_description_refine_edges"
        android:title="@string/pref_title_refine_edges" />

    <SwitchPreference
        android:visibility="gone"
        android:defaultValue="false"
        android:key="refine_decode_switch"
        android:summary="@string/pref_description_refine_decode"
        android:title="@string/pref_title_refine_decode" />

    <SwitchPreference
        android:visibility="gone"
        android:defaultValue="false"
        android:key="refine_pose_switch"
        android:summary="@string/pref_description_refine_pose"
        android:title="@string/pref_title_refine_pose" />
        -->

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_decimation_list_titles"
            android:entryValues="@array/pref_decimation_list_values"
            android:key="decimation_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_decimation"/>

        <EditTextPreference
            android:defaultValue="@string/pref_default_sigma"
            android:inputType="numberDecimal"
            android:key="sigma_value"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_sigma" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_nthreads"
            android:inputType="number"
            android:key="nthreads_value"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_nthreads"/>

        <ListPreference
            android:defaultValue="tag36h11"
            android:entries="@array/pref_tag_family_list_titles"
            android:entryValues="@array/pref_tag_family_list_values"
            android:key="tag_family_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_tag_family" />
    </PreferenceCategory>
    <PreferenceCategory
    android:title="World Size"
    android:key="pref_cat_world">
        <SeekBarPreference
            android:key="worldWidth"
            android:title="Width: 10"
            android:summary="Width of World."
            android:max="19"
            android:defaultValue="9" />
        <SeekBarPreference
            android:key="worldHeight"
            android:title="Height: 10"
            android:summary="Height of World."
            android:max="19"
            android:defaultValue="9" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Camera Settings"
        android:key="pref_cat_camera">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_camera_facing_list_titles"
            android:entryValues="@array/pref_camera_facing_list_values"
            android:key="device_settings_camera_facing"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_camera_facing" />
        <!--
            <ListPreference
                android:id="@+id/camera_resolution"
                android:defaultValue="1080"
                android:entries="@array/pref_camera_resolution_titles"
                android:entryValues="@array/pref_camera_resolution_values"
                android:key="camera_resolution"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"
                android:title="@string/pref_title_camera_resolution" />
        -->

    </PreferenceCategory>
</PreferenceScreen>